Fix superfluous border & spacing in domains list

--- a/app/javascript/styles/mastodon/admin.scss
+++ b/app/javascript/styles/mastodon/admin.scss
@@ -327,9 +327,9 @@ $content-width: 840px;
       font-weight: 700;
       color: $primary-text-color;
       text-transform: none;
-      padding-bottom: 0;
+      padding-top: 0;
       margin-bottom: 0;
-      border-bottom: 0;
+      border-top: 0;
 
       .comment {
         display: block;
